Fixed covers not showing on scroll

--- a/app/src/main/res/scss/search-results.scss
+++ b/app/src/main/res/scss/search-results.scss
@@ -1,6 +1,6 @@
 .search-results {
   .rows {
-    justify-content: flex-start;
+    justify-content: space-between;
     margin-left: -10px;
     margin-right: -10px;
   }
